--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,3 +1,21 @@
+.header {
+  display: block;
+}
+
+.h_header {
+  position: fixed;
+  
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+
+  padding: 25px 0;
+
+  
+
+}
+
 .nav {
   overflow: auto;
   padding: 25px 0;
@@ -51,6 +69,8 @@
 
     ul {
       display: flex;
+      flex: 1;
+      justify-content: flex-end;
 
       @media (max-width: $break-medium) {
         margin-left: 55px;
