--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,6 +21,8 @@ footer > .footer_wrap,
 
 main {
 	overflow: hidden;
+
+	margin-top: 83.5px;
 	padding-bottom: 50px;
 
 	@media (min-width: $break-large) {
