--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,24 +1,16 @@
-.header {
-  display: block;
-}
-
-.h_header {
+header {
+  width: 100%;
+  background: #ffffff;
+  padding: 0.75rem 0;
   position: fixed;
-  
   top: 0;
   left: 0;
-  right: 0;
-  z-index: 999;
-
-  padding: 25px 0;
-
-  
-
+  z-index: 99999;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .nav {
   overflow: auto;
-  padding: 25px 0;
   margin-bottom: 10px;
 
   &-container {
@@ -29,7 +21,6 @@
     .logo {
       display: inline-block;
       margin: 0 60px 0 20px;
-      float: left;
 
       @media (max-width: $break-medium) {
         float: none;
