feat: Baseline with Test Post added

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -21,10 +21,10 @@
 
 {% endif %}
 
+<!-- Tech Blog - header -->
 {% if page.post-header == true %}
 
-{% endif %}
-{% if page.project-header == true %}
+{% include post-header.html %}
 
 {% endif %}
 
