--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -17,7 +17,7 @@
 		}
 
 		.title {
-			color: $primary;
+			color: $pastel-liquid-purple;
 			margin: 80px 0 20px 0;
 			font-family: $source;
 			font-size: 20px;
