--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@ $pastel-liquid-purple: #DEB3CF;
 $pastel-liquid-purple-bold: #B57FB3;
 $coral-orange: #F2827F;
 
-$primary: $pastel-liquid-purple-bold;
+$primary: $pastel-liquid-purple;
 $primary-dark: #9bce26;
 $secondary: $coral-orange;
 $light-gray: #b3b3b3;
